--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,10 @@
   command = "hugo"
 
 [context.deploy-preview]
-  command = "hugo --buildDrafts --buildFuture"
-  
+  command = "hugo --baseURL $DEPLOY_PRIME_URL"
+#  --buildDrafts --buildFuture might be useful one day?
+
 # Branch Deploy context: All deploys that are not in
 # an active Deploy Preview will inherit these settings.
 [context.branch-deploy]
-  command = "hugo --baseURL DEPLOY_PRIME_URL"
+  command = "hugo --baseURL $DEPLOY_PRIME_URL"
